--- a/homepage.html
+++ b/homepage.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GD LRR Demon List</title>
-    <meta property="og:title" content="Geometry Dash LRR Demonlist">
-    <meta property="og:description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
+    <title>GD Personal Demonlist</title>
+    <meta property="og:title" content="Geometry Dash PDL">
+    <meta property="og:description" content="A demon list dedicated to the achievements of a certain group of players.">
     <meta name="author" content="ryan9328">
     <meta name="keywords" content="ryan9328,official,geometry,dash,hardest,extreme,insane,demon,list,demonlist,hardest,levels,gmd,gd,typier,game,top,level,levels,player,players,geometry dash, LRR, 60hz, 60HZ, 75hz, 75HZ, geometry dash 60hz demonlist, GD 60hz list">
     <meta name="description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
@@ -46,35 +46,35 @@
     <!-- <p><a href = "leaderboard.html">Leaderboard page</a></p>
     <p><a href = "Extendedlist.html">Extended page</a></p> -->
     <div id="levels-container"> 
-      <h1 style = "text-align:center">The Geometry Dash Low Refresh Rate Demon List</h1>
-      <h3 style = "text-align:center">Now on its own website as opposed to a slow, limited <a target = "_blank" href = "https://sites.google.com/view/lrrdemonlist/about-the-list?authuser=0">Google Site!</a></h3>
-      <h6 style = "text-align:center">Sponsored by ryan9328<sup>TM</sup></h6>
-      <p style = "text-align:center">Since the demons on pointercrate are starting to become unreasonable for 60/75hz/Mobile players to keep up with, here's a list of levels for said players instead! Here's how everything works.</p>
+      <h1 style = "text-align:center">The Geometry Dash Personal Demonlist</h1>
+      <h3 style = "text-align:center">Now on a new Website as opposed to the old bad one (it was really bad)<a target = "_blank" href = "https://sites.google.com/view/lrrdemonlist/about-the-list?authuser=0">Google Site!</a></h3>
+      <h6 style = "text-align:center">Created by Li Mao<sup>TM</sup></h6>
+      <p style = "text-align:center">This Website was created as a way to rank completed Demons that were completed from a certain group of people.</p>
       <div class = "column">
         <div class = "card">
           <button class = "collapsible">
             <div class = "title">
-              <h3 class = "date">These are the rules. They can also be found on our <a target = "_blank" href = "https://discord.gg/PCQ5V3e">Discord server.</a> Please read them.</h3>
+              <h3 class = "date">These are the rules.</a> Please read them if you want to send a record.</h3>
             </div>
           </button>
           <div class = "content">
             <h2>Record Submission Rules</h2>
             <ul>
-              <li><strong>Low refresh rate means your monitor is running the game at 75fps or below (including mobile)! This means that if you want to submit a record, you need to have played the level on <=75fps. This includes playing at 75fps or below on a 144hz monitor.</strong></li>
-              <li>If an LDM is needed, as long as it doesn't remove any decoration that makes the level more difficult, it will be accepted. If you have any questions or are uncertain about what can and can't be removed contact a List Moderator on Discord.</li>
-              <li>Verifiers who verified the levels on 60-75hz/mobile will be counted as victors.</li>
+              <li>Achieved the record without using hacks (however, FPS bypass is allowed, up to 360fps).</li>
+              <li>Achieved the record on the level that is listed on the site - please check the level ID before you submit a record or submit a new level.</li>
+              <li>We accept new levels but only those of Hard Demon Difficulty or above as to not spam the List with random Levels. This Rule is highly subject to change to higher requirement, for example Insane Demons and above.</li>
               <li>2 Player Demons need to have been beaten SOLO to be accepted.</li>
-              <li>Beating levels with a secret way does not count towards the list, small skips are allowed though. If you are uncertain if a certain skip is allowed or not, once again our Discord server is the place to ask.</li>
-              <li>Any player who has previously beaten something on a low refresh rate or a mobile device will have their records counted for when they were using that refresh rate.</li>
-              <li>Please do not submit multiple records of the same record (don't submit dupes)!</li>
+              <li>Do not use secret routes or bug routes, you can use skips as long as they don't skip a whole part and instead just skip for example 2-3 clicks.</li>
+              <li>Do not use easy modes, only a record of the unmodified level qualifies.</li>
+              <li>Please do not submit multiple records of the same record (don't submit dupes or i will smite you, or just not accept the record, have patience)!</li>
+              <li>Have either source audio or clicks/taps in the video. Edited audio only does not count (Exceptions may be applicable)<li>
+              <li>Once a level falls onto the Legacy List, we do not accept any more records for it, the only exception to this is if you beat it while it still was on the List but never submitted it or we missed it.</li>
+              <li>If you aren't sure if something is allowed or not, you can refer back to the Pointercrate Guidelines: https://pointercrate.com/guidelines/index</li>
             </ul>
             <h2>Other List Rules</h2>
             <ul>
               <li>All levels on this list need to be rated demons.</li>
-              <li>This list was made for people who want a more accessible list for lower refresh rates! However, the placements of the levels will based off of 60hz PC opinions MOSTLY.</li>
-              <li>Levels that don't have a 60hz PC victor but do have a mobile victor are eligible for addition; levels that don't have a 60hz PC victor but do have a 61-75hz victor are not. This is because mobile is similar enough in difficulty to 60hz usually, while 75hz can be massively different (especially for ship and wave based levels).</li>
-              <li>If there is not a verification video for a certain level, the first LRR victor's video will be displayed for that level.</li>
-              <li>If (like the case of Down Bass) there is no verification video and there is no LRR victor either then a random victor’s video will be shown instead.</li>
+              <li>If a verification video is not present for a Level, then the video of the first victor on</li>
             </ul>
           </div>
         </div>
@@ -83,47 +83,34 @@
         <div class = "card">
           <button class = "collapsibleBig">
             <div class = "title">
-              <h1 class = "date">Contact/Follow us!</h1>
+              <h1 class = "date">Contacts</h1>
             </div>
           </button>
           <div class = "content">
             <h2>Reach out to the team!</h2>
-            <p>Once again, the easiest place to reach us is our <a target = "_blank" href = "https://discord.gg/PCQ5V3e">Discord server.</a> There will always be at least 3 staff members active at all hours of the day, so you can rest assured that your question or concern will get answered! The community there's pretty chill too, so, why not pop in?</p>
+            <p>Once again, if you have any Questions regarding this List then feel free to contact Staffmembers.</p>
             
             <p>Speaking of staff, here's the Staff list if you want to reach someone in particular or are just curious:</p>
             <ul>
-              <li><h4>List Owners:</h4></li>
+              <li><h4>List Owners:</h4></li>       
               <ul>
-                <li>TyPier (TyPier#1835)</li>
-                <li>jaynt456 (jaynt#6875)</li>
-                <li>ryan9328 (6666#9328, also the developer and the person who made this homepage that you are reading rn :D)</li>
+                <li><a href = "https://www.youtube.com/channel/UCqgexZRtRv9R73m8P9uzKCQ" target = "_blank">Li Mao</a></p> (li_mao) (also the guy who created the list you are seeing right now)</li>
               </ul>
-              <li><h4>List Moderators:</h4></li>
-              <ul>
-                <li>Coopersuper8 (Coopersuper8#1155)</li>
-                <li>Ikarya (Ikarya#0876)</li>
-                <li>Liizoks (Liizoks#8299)</li>
-                <li>owoZ1rc0n (owoZ1rc0n#4944)</li>
-                <li>Samiversal (Samiversal#2000)</li>
-                <li>SubZeroV (SubZeroV#5491)</li>
-              </ul>
-              <li><h4>Server Admins:</h4></li>
-              <ul>
-                <li>DarkGamma (DarkGamma#4442)</li>
-                <li>Moutaa (Moutaa#0380)</li>
-              </ul>
-              <li><h4>Server Staff:</h4></li>
-              <ul>
-                <li>notSilva (notSilva#6518)</li>
-                <li>Lavaclaw (Lavaclaw#7902)</li>
-                <li>Inga8 (Inga8#7405)</li>
+              <!--<li><h4>List Moderators:</h4></li>-->
+              <!--<ul>-->
+                <!--<li>Coopersuper8 (Coopersuper8#1155)</li>-->
+              <!--</ul>-->
+              <!--<li><h4>Server Admins:</h4></li>-->
+              <!--<ul>-->
+                <!--<li>DarkGamma (DarkGamma#4442)</li>-->
+              <!--</ul>-->
+              <!--<li><h4>Server Staff:</h4></li>!-->
+              <!--<ul>!-->
+                <!--<li>notSilva (notSilva#6518)</li>!-->
               </ul>
             </ul>
-            <h2>Follow the team! and other links</h2>
-            <p>Almost every member of the team has a YouTube channel. All of them are featured channels on the LRR List's official <a href = "https://www.youtube.com/channel/UCI4HMETnm1F3-L-wpCVP_qw/videos?view_as=subscriber" target = "_blank">Youtube channel!</a></p>
-            <p>Some of the members have socials, others do not. Team members will have their social media links linked to their discord accounts if they have any, so that's the place to find where to follow them.</p>
-            <p>Record submission form: <a href = "https://docs.google.com/forms/d/e/1FAIpQLSfpZDIHi6G47Es11l_DggbmoXHaJIGfFZQd-vbpq8tr1hEoQA/viewform" target = "_blank">https://docs.google.com/forms/d/e/1FAIpQLSfpZDIHi6G47Es11l_DggbmoXHaJIGfFZQd-vbpq8tr1hEoQA/viewform</a></p>
-            <p>LRR Knowledgebase: <a href = "https://docs.google.com/document/d/1HLgXGqfm7FPKPoVIOwg7o3N8efB7lZfR1hNhOKWR68M/edit?usp=sharing" target = "_blank">https://docs.google.com/document/d/1HLgXGqfm7FPKPoVIOwg7o3N8efB7lZfR1hNhOKWR68M/edit?usp=sharing</a></p>
+            <h2>Other useful links</h2>
+            <p>Record submission form: <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform</a></p>
           </div>
         </div>
       </div>
@@ -132,18 +119,13 @@
         <div class = "card">
           <button class = "collapsibleBig">
             <div class = "title">
-              <h1 class = "date">"Help...</h1>
+              <h1 class = "date">Other Questions</h1>
             </div>
           </button>
           <div class = "content">
-            <p>With what?</p>
+            <p>The Questions:</p>
             <ul>
-              <li>... me calculate how many points I will have after I beat/progress on something!" Watch <a href = "https://www.youtube.com/watch?v=h0yA__f1c2c&ab_channel=LRRDemonList" target = "_blank">this</a> video.</li>
-              <li>... I need to ask you something!" Contact me (6666#9328) on discord.</li>
-              <li>... I don't understand what this symbol means!" Check out the <a href = "https://docs.google.com/document/d/1HLgXGqfm7FPKPoVIOwg7o3N8efB7lZfR1hNhOKWR68M/edit?usp=sharing" target = "_blank">knowledgebase.</a></li>
-              <li>... what's the leaderboard equation?" Check out the knowledgebase.</li>
-              <li>... me beat a level!" Here, I give you my blessings :)</li>
-              <li>... its not listed here." Check the knowledgebase or contact me on discord.</li>
+              <li>"How do the points get calculated?" Great Question, i don't have any clue behind the math, if you want to read up on it, you can find it <a href = "https://docs.google.com/document/d/1HLgXGqfm7FPKPoVIOwg7o3N8efB7lZfR1hNhOKWR68M/edit#heading=h.l1bxd7dtvlkl" target = "_blank">here.</a></p> </li>
             </ul>
           </div>
         </div>
