--- a/homepage.html
+++ b/homepage.html
@@ -74,7 +74,7 @@
             <h2>Other List Rules</h2>
             <ul>
               <li>All levels on this list need to be rated demons.</li>
-              <li>If a verification video is not present for a Level, then the video of the first victor on</li>
+              <li>If a verification video is not present for a Level, then the video of the first victor on a Level will be used.</li>
             </ul>
           </div>
         </div>
@@ -94,7 +94,7 @@
             <ul>
               <li><h4>List Owners:</h4></li>       
               <ul>
-                <li><a href = "https://www.youtube.com/channel/UCqgexZRtRv9R73m8P9uzKCQ" target = "_blank">Li Mao</a></p> (li_mao) (also the guy who created the list you are seeing right now)</li>
+                <li><a href = "https://www.youtube.com/channel/UCqgexZRtRv9R73m8P9uzKCQ" target = "_blank">Li Mao</a> (li_mao) (also the guy who created the list you are seeing right now)</li>
               </ul>
               <!--<li><h4>List Moderators:</h4></li>-->
               <!--<ul>-->
@@ -127,64 +127,6 @@
             <ul>
               <li>"How do the points get calculated?" Great Question, i don't have any clue behind the math, if you want to read up on it, you can find it <a href = "https://docs.google.com/document/d/1HLgXGqfm7FPKPoVIOwg7o3N8efB7lZfR1hNhOKWR68M/edit#heading=h.l1bxd7dtvlkl" target = "_blank">here.</a></p> </li>
             </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class = "column">
-        <div class = "card">
-          <button class = "collapsibleBig">
-            <div class = "title">
-              <h1 class = "date">Special Thanks</h1>
-            </div>
-          </button>
-          <div class = "content">
-            <p>This section was something that was completely missing on the old site - a section thanking all of the people that made this project possible, of which there are many.</p>
-            <p>Let's begin with the people who helped Ty and jaynt make the original list itself:</p>
-            <ul>
-              <li>Luqualizer</li>
-              <li>Zest</li>
-              <li>Exyl</li>
-              <li>GDonut</li>
-              <li>synactive</li>
-              <li>th31</li>
-              <li>LuigiDB</li>
-              <li>ThunderBT</li>
-              <li>Kneevan</li>
-              <li>Hilo</li>
-              <li>Shulk-</li>
-              <li>Indigo</li>
-              <li>Stormfly</li>
-              <li>KrmaL</li>
-              <li>Hawkyre</li>
-            </ul>
-            <p>All of the people listed here were/are skilled LRR players at one point or another, and all of them contributed greatly to making the list as accurate as possible. (Of course, that doesn't mean there isn't room for improvement in terms of rankings, which we'll get to in a second). A big thank you to them for being significant early contributors!</p>
-            <p>We would also like to thank Samiversal, for being a former longtime co-owner, FrostBurn, who did a lot of important work for the list in its Google Site days but has since left the team, and Sley, for building the LRR community server.</p>
-            <p>Moving into the present: we tried to make the list as accurate as possible, but of course we messed up in places (Esencia used to be above A Bizarre Phantasm, as one example). Like we mentioned before, the list always has room for improvement and greater accuracy somewhere, so now its time to thank those who help us make the list more accurate into the present:</p>
-            <ul>
-              <li>ThunderBT</li>
-              <li>Luqualizer</li>
-              <li>Samamba</li>
-              <li>Bread</li>
-              <li>GDonut</li>
-              <li>Exyl</li>
-              <li>Hilo</li>
-              <li>ItoPopcorn</li>
-              <li>Coopersuper8</li>
-              <li>and anyone else who's contributed an opinion, really. Thanks to you too!</li>
-            </ul>
-            <p>But the list isn't just ranking demons: its also a list of all of the dedicated players who have beaten said demons. Finding and adding all of those records takes a lot of work, and these people make it easier for us:</p>
-            <ul>
-              <li>Coopersuper8</li>
-              <li>Ikarya</li>
-              <li>Liizoks</li>
-              <li>owoZ1rc0n</li>
-              <li>Samiversal</li>
-              <li>SubZeroV</li>
-            </ul>
-            <p>And finally, a very special thank you to jack L, Vink, stadust, and NiknotNoob, who all helped me with the site itself. I especially want to thank jack L, who taught me all the javascript and json-related things that I know now which I used to build the backend for the site that you are seeing today. Oh and of course W3Schools, because that website makes learning HTML and CSS much quicker.</p>
-            <h4 style = "text-align:center">Once again, this list would not have been possible without all of the people mentioned above, so we sincerely thank you guys for your support.</h4>
-            <p style = "text-align:right">-ryan9328</p>
           </div>
         </div>
       </div>
