homepage fr this time

--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,7 @@
     <p><a href = "Extendedlist.html">Extended page</a></p> -->
     <div id="levels-container"> 
       <h1 style = "text-align:center">The Geometry Dash Personal Demonlist</h1>
-      <h3 style = "text-align:center">Now on a new Website as opposed to the old bad one (it was really bad)<a target = "_blank" href = "https://sites.google.com/view/lrrdemonlist/about-the-list?authuser=0">Google Site!</a></h3>
+      <h3 style = "text-align:center">Now on a new Website as opposed to the old bad one (it was really bad)</h3>
       <h6 style = "text-align:center">Created by Li Mao<sup>TM</sup></h6>
       <p style = "text-align:center">This Website was created as a way to rank completed Demons that were completed from a certain group of people.</p>
       <div class = "column">
