--- a/homepage.html
+++ b/homepage.html
@@ -67,9 +67,9 @@
               <li>Do not use secret routes or bug routes, you can use skips as long as they don't skip a whole part and instead just skip for example 2-3 clicks.</li>
               <li>Do not use easy modes, only a record of the unmodified level qualifies.</li>
               <li>Please do not submit multiple records of the same record (don't submit dupes or i will smite you, or just not accept the record, have patience)!</li>
-              <li>Have either source audio or clicks/taps in the video. Edited audio only does not count (Exceptions may be applicable)<li>
+              <li>Have either source audio or clicks/taps in the video. Edited audio only does not count (Exceptions may be applicable)</li>
               <li>Once a level falls onto the Legacy List, we do not accept any more records for it, the only exception to this is if you beat it while it still was on the List but never submitted it or we missed it.</li>
-              <li>If you aren't sure if something is allowed or not, you can refer back to the Pointercrate Guidelines: https://pointercrate.com/guidelines/index</li>
+              <li>If you aren't sure if something is allowed or not, you can refer back to the <a href = "https://pointercrate.com/guidelines/index" target = "_blank">Pointercrate Guidelines.</a></li>
             </ul>
             <h2>Other List Rules</h2>
             <ul>
