--- a/homepage.html
+++ b/homepage.html
@@ -62,11 +62,9 @@
             <ul>
               <li>Achieved the record without using hacks (however, FPS bypass is allowed, up to 360fps).</li>
               <li>Achieved the record on the level that is listed on the site - please check the level ID before you submit a record or submit a new level.</li>
-              <li>We accept new levels but only those of Hard Demon Difficulty or above as to not spam the List with random Levels. This Rule is highly subject to change to higher requirement, for example Insane Demons and above.</li>
               <li>2 Player Demons need to have been beaten SOLO to be accepted.</li>
               <li>Do not use secret routes or bug routes, you can use skips as long as they don't skip a whole part and instead just skip for example 2-3 clicks.</li>
               <li>Do not use easy modes, only a record of the unmodified level qualifies.</li>
-              <li>Please do not submit multiple records of the same record (don't submit dupes or i will smite you, or just not accept the record, have patience)!</li>
               <li>Have either source audio or clicks/taps in the video. Edited audio only does not count (Exceptions may be applicable)</li>
               <li>Once a level falls onto the Legacy List, we do not accept any more records for it, the only exception to this is if you beat it while it still was on the List but never submitted it or we missed it.</li>
               <li>If you aren't sure if something is allowed or not, you can refer back to the <a href = "https://pointercrate.com/guidelines/index" target = "_blank">Pointercrate Guidelines.</a></li>
@@ -75,6 +73,8 @@
             <ul>
               <li>All levels on this list need to be rated demons.</li>
               <li>If a verification video is not present for a Level, then the video of the first victor on a Level will be used.</li>
+              <li>We accept new levels but only those of Hard Demon Difficulty or above as to not spam the List with random Levels. This Rule is highly subject to change to higher requirement, for example Insane Demons and above.</li>
+              <li>Please do not submit multiple records of the same record (don't submit dupes or i will smite you, or just not accept the record, have patience)!</li>
             </ul>
           </div>
         </div>
@@ -94,7 +94,7 @@
             <ul>
               <li><h4>List Owners:</h4></li>       
               <ul>
-                <li><a href = "https://www.youtube.com/channel/UCqgexZRtRv9R73m8P9uzKCQ" target = "_blank">Li Mao</a> (li_mao) (also the guy who created the list you are seeing right now)</li>
+                <li><a href = "https://www.youtube.com/channel/UCqgexZRtRv9R73m8P9uzKCQ" target = "_blank">Li Mao</a> (li_mao) (also the guy who created the website you are looking at)</li>
               </ul>
               <!--<li><h4>List Moderators:</h4></li>-->
               <!--<ul>-->
