more website changes

--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GD LRR Demon List</title>
+    <title>GD Personal Demon List</title>
     <link href="/CSS/levelcards.css?v=2020-10-29" rel="stylesheet" type="text/css" />
     <link href="/CSS/nav.css?v=2020-10-05" rel="stylesheet" type="text/css" />
     <link href="/CSS/changelog.css?v=2020-10-05" rel="stylesheet" type="text/css" />
@@ -22,7 +22,7 @@
       <li class = "redir"><a href="extended.html">Extended List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
-      <li class = "titlebox">GD LRR Demon List</li>
+      <li class = "titlebox">GD Personal Demon List</li>
       <li>
         <button onclick="dropMenu()" class="dropbtn">Go To...</button>
         <div id="myDropdown" class="dropdown-content">
@@ -38,14 +38,11 @@
     </strong>
     <div id="levels-container"> 
       <h1>Credits</h1>
-      <p>Congrats! You found a hidden page! Good for you. Here I, ryan, would like to credit some people who helped with development, either directly or indirectly.</p>
+      <p>Congrats! You found a hidden page! Good for you. Here I, Li Mao, would like to credit some people who helped with development, either directly or indirectly.</p>
       <ul>
-        <li>jack L. Taught me everything I know, and built the skeleton of the new JS-ified site.</li>
-        <li>stadust. A fantastic developer, and the developer of the pointercrate demon list. He made the jquery script for resizing the video thumbnails, I pretty much tweaked a couple things and then copied it. Oh and, before you start yelling at me for being a plagiarist, pointercrate is MIT licensed, and I asked him if it was ok. He said yes.</li>
-        <li>Vink & Xan. Shitty list owners, who kindly gave me their code for their leaderboards, which allowed me to make the pop ups.</li>
-        <li>Necolas, or whoever the guy that made <a href = "https://www.github.com/necolas/normalize.css" target = "_blank">this</a> is. This is what allowed the site to look as clean as it is today. Thanks.</li>
-        <li>w3schools. Fantastic site for quick HTML and CSS tutorials.</li>
-        <li>nik. He taught me about MongoDB, which either that or firebase is something I'm going to implement in the future.</li>
+        <li>Tim from an IT Company i was chilling at for some time, real nice guy!</li>
+        <li>The LRR (Low Refresh Rate) Demon List for providing some of the source code which helped me tremendously when it came to creating this Website (especially the Pointercrate Math for point calculation!!!)</li>
+        <li>I also want to thank the Blade GDPS for kind of indirectly giving me the idea of making such a Website, i kind of had this Idea in the back of my head for a long time but seeing the changes the GDPS went through kind of motivated me a lot!</li>
       </ul> 
     </div>
     <script src="/JS/dropdown.js"></script>
