--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GD Personal Demonlist</title>
+    <title>GD Personal Demon List</title>
     <meta property="og:title" content="Geometry Dash PDL">
     <meta property="og:description" content="A demon list dedicated to the achievements of a certain group of players.">
     <meta name="author" content="ryan9328">
@@ -49,7 +49,7 @@
       <h1 style = "text-align:center">The Geometry Dash Personal Demonlist</h1>
       <h3 style = "text-align:center">Now on a new Website as opposed to the old bad one (it was really bad)</h3>
       <h6 style = "text-align:center">Created by Li Mao<sup>TM</sup></h6>
-      <p style = "text-align:center">This Website was created as a way to rank completed Demons that were completed from a certain group of people.</p>
+      <p style = "text-align:center">This Website was created as a way to rank completed Demons that were completed from a certain group of people. Inspired by the LRR Demon List</p>
       <div class = "column">
         <div class = "card">
           <button class = "collapsible">
