--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:title" content="Geometry Dash LRR Demonlist">
-    <meta property="og:description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
+    <meta property="og:title" content="Geometry Dash Personal Demon List">
+    <meta property="og:description" content="A demon list dedicated to ranking our Personal Demons.">
     <meta name="author" content="ryan9328">
     <meta name="keywords" content="ryan9328,official,geometry,dash,hardest,extreme,insane,demon,list,demonlist,hardest,levels,gmd,gd,typier,game,top,level,levels,player,players,geometry dash, LRR, 60hz, 60HZ, 75hz, 75HZ, geometry dash 60hz demonlist, GD 60hz list">
-    <meta name="description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
-    <title>GD LRR Demon List</title>
+    <meta name="description" content="A demon list dedicated to ranking our Personal Demons.">
+    <title>GD Personal Demon List</title>
     <link href="/CSS/levelcards.css?v=2020-10-29" rel="stylesheet" type="text/css" />
     <link href="/CSS/nav.css?v=2020-10-05" rel="stylesheet" type="text/css" />
     <link href="/CSS/list.css?v=2020-10-29" rel="stylesheet" type="text/css" />
@@ -26,7 +26,7 @@
       <li class = "redir"><a href="extended.html">Extended List</a></li>
       <li class = "redir"><a class="active-nav-item" href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
-      <li class = "titlebox">GD LRR Demon List</li>
+      <li class = "titlebox">GD Personal Demon List</li>
       <li>
         <button onclick="dropMenu()" class="dropbtn">Go To...</button>
         <div id="myDropdown" class="dropdown-content">
@@ -41,8 +41,8 @@
     <!-- <p><a href = "leaderboard.html">Leaderboard page</a></p>
     <p><a href = "Extendedlist.html">Extended page</a></p> -->
     <div id="levels-container"> 
-      <h1 style = "text-align:center">HEY YOU!</h1>
-      <p style = "text-align:center">If you somehow found this, this is most likely not what you are looking for. The ACTUAL LRR List website is <a href = "https://gdlrrlist.cf/">gdlrrlist.cf</a></p>
+      <h1 style = "text-align:center">Top 75 Demons List</h1>
+      <p style = "text-align:center">These Levels stand at the top of this List, all of these have victors and award Points for completions and partial progress!<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p></p>
     </div>
     <script src="/JS/dropdown.js"></script>
     <script src="/JS/mainlist.js?v=2020-10-29"></script>
