--- a/extended.html
+++ b/extended.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:title" content="Geometry Dash LRR Demonlist">
-    <meta property="og:description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
+    <meta property="og:title" content="Geometry Dash Personal Demon List">
+    <meta property="og:description" content="A demon list dedicated to ranking our Personal Demons.">
     <meta name="author" content="ryan9328">
     <meta name="keywords" content="ryan9328,official,geometry,dash,hardest,extreme,insane,demon,list,demonlist,hardest,levels,gmd,gd,typier,game,top,level,levels,player,players,geometry dash, LRR, 60hz, 60HZ, 75hz, 75HZ, geometry dash 60hz demonlist, GD 60hz list">
-    <meta name="description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
-    <title>GD LRR Demon List</title>
+    <meta name="description" content="A demon list dedicated to ranking our Personal Demons.">
+    <title>GD Personal Demon List</title>
     <link href="/CSS/levelcards.css?v=2020-10-29" rel="stylesheet" type="text/css" />
     <link href="/CSS/nav.css?v=2020-10-05" rel="stylesheet" type="text/css" />
     <link href="/CSS/list.css?v=2020-10-29" rel="stylesheet" type="text/css" />
@@ -27,7 +27,7 @@
       <li class = "redir"><a class="active-nav-item" href="extended.html">Extended List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
-      <li class = "titlebox">GD LRR Demon List</li>
+      <li class = "titlebox">GD Personal Demon List</li>
       <li>
         <button onclick="dropMenu()" class="dropbtn">Go To...</button>
         <div id="myDropdown" class="dropdown-content">
@@ -41,7 +41,7 @@
     </ul>
     <div id="levels-container"> 
       <h1 style = "text-align:center">Extended Demons List</h1>
-      <p style = "text-align:center">All of these levels are still very hard, but they don't quite make the cut for the Top 100. They still award points, though, and basically function the same way as the Main List - however, for a new level to get added here, it needs to be more difficult than Final Epilogue.<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSfpZDIHi6G47Es11l_DggbmoXHaJIGfFZQd-vbpq8tr1hEoQA/viewform?usp=sf_link" target = "_blank">here!</a></p>
+      <p style = "text-align:center">All of these levels are still very hard, but they don't quite make the cut for the Top 75. They still award points, though, and basically function the same way as the Main List.<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p>
     </div>
     <script src="/JS/collapsible.js?v=2020-10-05"></script>
     <script src="/JS/extended.js?v=2020-10-29"></script>
