--- a/sitechanges.html
+++ b/sitechanges.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GD LRR Demon List</title>
+    <title>GD Personal Demon List</title>
     <link href="/CSS/levelcards.css?v=2020-10-29" rel="stylesheet" type="text/css" />
     <link href="/CSS/nav.css?v=2020-10-05" rel="stylesheet" type="text/css" />
     <link href="/CSS/changelog.css?v=2020-10-05" rel="stylesheet" type="text/css" />
@@ -21,7 +21,7 @@
       <li class = "redir"><a href="extended.html">Extended List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
-      <li class = "titlebox">GD LRR Demon List</li>
+      <li class = "titlebox">GD Personal Demon List</li>
       <li>
         <button onclick="dropMenu()" class="dropbtn">Go To...</button>
         <div id="myDropdown" class="dropdown-content">
