--- a/changelog.html
+++ b/changelog.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:title" content="Geometry Dash LRR Demonlist">
-    <meta property="og:description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
+    <meta property="og:title" content="Geometry Dash Personal Demon List">
+    <meta property="og:description" content="A demon list dedicated to ranking our Personal Demons.">
     <meta name="author" content="ryan9328">
     <meta name="keywords" content="ryan9328,official,geometry,dash,hardest,extreme,insane,demon,list,demonlist,hardest,levels,gmd,gd,typier,game,top,level,levels,player,players,geometry dash, LRR, 60hz, 60HZ, 75hz, 75HZ, geometry dash 60hz demonlist, GD 60hz list">
-    <meta name="description" content="A demon list dedicated to low-refresh-rate (60hz, 75hz, Mobile) Geometry Dash players.">
+    <meta name="description" content="A demon list dedicated to ranking our Personal Demons.">
     <title>GD LRR Demon List</title>
     <link href="/CSS/levelcards.css?v=2020-10-29" rel="stylesheet" type="text/css" />
     <link href="/CSS/nav.css?v=2020-10-05" rel="stylesheet" type="text/css" />
@@ -27,7 +27,7 @@
       <li class = "redir"><a href="extended.html">Extended List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a href="homepage.html">About</a></li>
-      <li class = "titlebox">GD LRR Demon List</li>
+      <li class = "titlebox">GD Personal Demon List</li>
       <li>
         <button onclick="dropMenu()" class="dropbtn">Go To...</button>
         <div id="myDropdown" class="dropdown-content">
@@ -45,59 +45,18 @@
         <h1 style = "text-align:center">Changelog</h1>
         <p style = "text-align:center">Every change that this list has ever experienced (after the creation of the Google Site), sorted by most recent at the top and least recent towards the bottom.</p>
         <p style = "text-align:center">Looking for the <a href = "sitechanges.html" target = "_blank">website changelog?</a></p>
-        <div class = "column">
-            <div class = "card">
-            <button class = "collapsible">
-                <div class = "title">
-                    <h3 class = "date">November 1, 2020 Changes:</h3>
-                </div>
-            </button>
-                <div class = "content">
-                   <p dir="ltr"><strong>Inflective</strong> has been placed at #39, above <strong>ATMarbl</strong> and below <strong>Prismatic Haze</strong>. This pushes <i>Retention</i> onto the Extended List.</p>
-                </div>
-            </div>
-        </div>
-        <div class = "column">
-            <div class = "card">
-            <button class = "collapsible">
-                <div class = "title">
-                    <h3 class = "date">October 18, 2020 Changes:</h3>
-                </div>
-            </button>
-                <div class = "content">
-                    <p dir="ltr"><strong>Azure Fiesta</strong> has been raised from #53 to #46, above <strong>Idols</strong> and below <strong>Concaved Memories</strong> with a list requirement of 55%.</p>
-                    <p dir="ltr"><strong>FinKor</strong> has been placed at #97, above <strong>CYCLONE</strong> and below <strong>A2Marbl</strong>. This pushes <i>Awakening Horus</i> onto the Extended List.</p>
-                    <p dir="ltr"><i>Master Duel</i> has been placed at #116, above <i>Underground</i> and below <i>Duelo Maestro</i>.</p>
-                </div>
-            </div>
-        </div>
       <div class = "column">
         <div class = "card">
           <button class = "collapsible">
             <div class = "title">
-              <h3 class = "date">February 3, 2020 Changes:</h3>
+              <h3 class = "date">November 20, 2023 Changes:</h3>
             </div>
           </button>
           <div class = "content">
-            <p dir="ltr" ><span style="font-family: Bitter;"><strong>Level Spot Changes!</strong></span></p>
-            <p dir="ltr" >Esencia has been lowered to #50, between Twisted Tranquility and Niflheim</p>
-            <p dir="ltr" >AAAAAAAAAAAAAAAAAAAA has been raised one spot up to #97 between Master Duel and Cosmic Calamity</p>
+            <p dir="ltr" >Creation of the Website, meaning all the levels from the old List have been placed here.</p>
           </div>
         </div>
       </div>
-      <div class = "column">
-        <div class = "card">
-          <button class = "collapsible">
-            <div class = "title">
-              <h3 class = "date">February 2, 2020 Changes:</h3>
-            </div>
-          </button>
-          <div class = "content">
-              <p dir="ltr" ><span style="font-family: Bitter;"><strong>Level Additions!</strong></span></p><p dir="ltr" >Added Factory Realm X at #10 between distraught and Red World Rebirth</p><p dir="ltr" ><span style="font-family: Bitter;"><strong>Level Spot Changes!</strong></span></p><p dir="ltr" >The Flawless was lowered to #25 between The Hell Origin and MadMansion</p><p dir="ltr" >AAAAAAAAAAAAAAAAAAAA has been raised to #97 between Cosmic Calamity and The Ultimate Phase</p><p dir="ltr" >These changes push Photvoltaic off the list</p><p dir="ltr" >_______________________________________________________________________________________________________</p><p dir="ltr" ><span style="font-family: Bitter;"><strong>Level Additions!</strong></span></p><p dir="ltr" >Added Killbot at #4 between Celestial Force and Bloodbath</p><p dir="ltr" >This change pushes Excessive Compliment off the list</p>
-          </div>
-        </div>
-      </div>
-    </div>
     <script src="/JS/dropdown.js"></script>
     <script src="/JS/collapsible.js?v=2020-10-05"></script>
   </body>
