--- a/changelog.html
+++ b/changelog.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ryan9328">
     <meta name="keywords" content="ryan9328,official,geometry,dash,hardest,extreme,insane,demon,list,demonlist,hardest,levels,gmd,gd,typier,game,top,level,levels,player,players,geometry dash, LRR, 60hz, 60HZ, 75hz, 75HZ, geometry dash 60hz demonlist, GD 60hz list">
     <meta name="description" content="A demon list dedicated to ranking our Personal Demons.">
-    <title>GD LRR Demon List</title>
+    <title>GD Personal Demon List</title>
     <link href="/CSS/levelcards.css?v=2020-10-29" rel="stylesheet" type="text/css" />
     <link href="/CSS/nav.css?v=2020-10-05" rel="stylesheet" type="text/css" />
     <link href="/CSS/changelog.css?v=2020-10-05" rel="stylesheet" type="text/css" />
