--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@
       <li class = "redir"><a href="extended.html">Extended List</a></li>
       <li class = "redir"><a href="index.html">Main List</a></li>
       <li class = "redir"><a class="active-nav-item" href="homepage.html">About</a></li>
-      <li class = "titlebox">GD LRR Demon List</li>
+      <li class = "titlebox">GD Personal Demon List</li>
       <li>
         <button onclick="dropMenu()" class="dropbtn">Go To...</button>
         <div id="myDropdown" class="dropdown-content">
