--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p><a href = "Extendedlist.html">Extended page</a></p> -->
     <div id="levels-container"> 
       <h1 style = "text-align:center">Top 75 Demons List</h1>
-      <p style = "text-align:center">These Levels stand at the top of this List, all of these have victors and award Points for completions and partial progress!<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p></p>
+      <p style = "text-align:center">These Levels stand at the top of the List, all of these have victors or have some form of progress and all award Points for completions and partial progress!<br> Want to submit a record? Submit it <a href = "https://docs.google.com/forms/d/e/1FAIpQLSedX9XdOi-KgSuQKMYRhLjhnS3e163AiZFXgptWZ_rNTLV7oA/viewform" target = "_blank">here!</a></p></p>
     </div>
     <script src="/JS/dropdown.js"></script>
     <script src="/JS/mainlist.js?v=2020-10-29"></script>
