--- a/sitechanges.html
+++ b/sitechanges.html
@@ -37,8 +37,8 @@
     </strong>
     <div id="levels-container"> 
       <h1 style = "text-align:center">Website Changelog</h1>
-      <p style = "text-align:center">Here, I'll be noting down any changes to the website that take place. Since most people probably won't care, I won't add this in the directory, so it'll be a bit difficult to access.</p>
-      <div class = "column">
+      <p style = "text-align:center">Here you can find changes i am making to the Website. I won't add this in the directory, so it'll be a bit difficult to access.</p>
+      <!--<div class = "column">
         <div class = "card">
           <button class = "collapsible">
             <div class = "title">
@@ -50,54 +50,6 @@
           </div>
         </div>
       </div>
-      <div class = "column">
-        <div class = "card">
-          <button class = "collapsible">
-            <div class = "title">
-              <h3 class = "date">October 6, 2020 (v1.0.2)</h3>
-            </div>
-          </button>
-          <div class = "content">
-              <p dir="ltr" >SSL Encryption enabled, meaning https headed URLs will work now. This should also make the google search engine SEOs favor us more, so hopefully google can notice us soon because google is refusing to do so atm :(</p>
-          </div>
-        </div>
-      </div>
-      <div class = "column">
-        <div class = "card">
-          <button class = "collapsible">
-            <div class = "title">
-              <h3 class = "date">October 5, 2020 (v1.0.1)</h3>
-            </div>
-          </button>
-          <div class = "content">
-              <p dir="ltr" >Small bugfix update: Ax20 was causing a lot of issues for smaller screens, so now that shrinks relative to your device's resolution. Cool. Also more list mods are starting to get the hang of the new site editing system, so that's cool too.</p>
-          </div>
-        </div>
-      </div>
-      <div class = "column">
-        <div class = "card">
-          <button class = "collapsible">
-            <div class = "title">
-              <h3 class = "date">October 4, 2020 (v1.0.0)</h3>
-            </div>
-          </button>
-          <div class = "content">
-              <p dir="ltr" >We have officially moved to this new thing! yay! Everything looks much nicer now-stuff looks modern rather than from the 1990s. And now everything is powered by JavaScript, so thats great.</p>
-          </div>
-        </div>
-      </div>
-    <div class = "column">
-        <div class = "card">
-          <button class = "collapsible">
-            <div class = "title">
-              <h3 class = "date">July 27, 2020 (vAlpha)</h3>
-            </div>
-          </button>
-          <div class = "content">
-              <p dir="ltr" >Domain reserved, early features were made. At this point in time, everything was powered by C++ file generation, so it wasn't fully automatic, which is why I call this version "vAlpha". After early August,I didn't update this site at all, because I was doing all the dev work in the <a href = "https://repl.it/@JackLuo001/geometry-dash#index.html" target = "_blank">repl</a> after that; so this site was in Alpha stage pretty much up until it was ready for the list Mods to start working on themselves.</p>
-          </div>
-        </div>
-    </div>
     </div>
     <script src="/JS/dropdown.js"></script>
     <script src="/JS/collapsible.js?v=2020-10-05"></script>
