--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
     </strong>
     <div id="levels-container"> 
         <h1 style = "text-align:center">Changelog</h1>
-        <p style = "text-align:center">Every change that this list has ever experienced (after the creation of the Google Site), sorted by most recent at the top and least recent towards the bottom.</p>
+        <p style = "text-align:center">Every change that this list has ever experienced (after the creation of this new Website), sorted by most recent at the top and least recent towards the bottom.</p>
         <p style = "text-align:center">Looking for the <a href = "sitechanges.html" target = "_blank">website changelog?</a></p>
       <div class = "column">
         <div class = "card">
