--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,18 @@
         <h1 style = "text-align:center">Changelog</h1>
         <p style = "text-align:center">Every change that this list has ever experienced (after the creation of this new Website), sorted by most recent at the top and least recent towards the bottom.</p>
         <p style = "text-align:center">Looking for the <a href = "sitechanges.html" target = "_blank">website changelog?</a></p>
+       <div class = "column">
+        <div class = "card">
+          <button class = "collapsible">
+             <div class = "title">
+              <h3 class = "date">November 27, 2023 Changes:</h3>
+             </div>
+           </button>
+           <div class = "content">
+             <p dir="ltr" >Technicolor has been placed at #18</p>
+          </div>
+        </div>
+      </div>
       <div class = "column">
         <div class = "card">
           <button class = "collapsible">
