no concept added

--- a/changelog.html
+++ b/changelog.html
@@ -49,11 +49,11 @@
         <div class = "card">
           <button class = "collapsible">
              <div class = "title">
-              <h3 class = "date">November 27, 2023 Changes:</h3>
+              <h3 class = "date">November 28, 2023 Changes:</h3>
              </div>
            </button>
            <div class = "content">
-             <p dir="ltr" >Technicolor has been placed at #18</p>
+             <p dir="ltr" >Technicolor has been placed at #18 and no concept has been placed at #20.</p>
           </div>
         </div>
       </div>
