--- a/changelog.html
+++ b/changelog.html
@@ -53,7 +53,8 @@
              </div>
            </button>
            <div class = "content">
-             <p dir="ltr" >Technicolor has been placed at #18 and no concept has been placed at #20.</p>
+             <p dir="ltr" >Technicolor has been placed at #18.</p>
+             <p dir="ltr" >no concept has been placed at #20.</p>
           </div>
         </div>
       </div>
